--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -209,7 +209,7 @@ html, body {
 	}
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 768px) and (max-width: 1023px) {
 
 	#menu {
 		height: 70%;
