--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -4,6 +4,7 @@
 }
 
 html, body {
+	min-width: 500px;
 	width: 100%;
 	height: 100%;
 	margin: 0;
@@ -119,7 +120,6 @@ html, body {
 	justify-content: center;
 	/* background-color: rgba(255, 255, 255, 0.1); */
 	width: 900px;
-	min-width: 600px;
 	height: 800px;
 	margin: 0 auto;
 }
@@ -196,10 +196,22 @@ html, body {
 	}
 
 	#main {
-		max-width: 400px;
-		max-height: 400px;
-		overflow-x: scroll;
-		overflow-y: hidden;
+		margin: 5em auto;
+		width: 400px;
+		height: 400px;
+		background-color: red;
+	}
+
+	#basicFrame {
+		margin: auto;
+		width: 400px;
+		height: 400px;
+	}
+
+	#customArea {
+		margin: auto;
+		width: 400px;
+		height: 400px;
 	}
 
 	#footer {
@@ -238,5 +250,4 @@ html, body {
 		overflow-x: scroll;
 		overflow-y: hidden;
 	}
-
 }
