--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -26,6 +26,10 @@ html, body {
 	border-radius: 10px;
 }
 
+.area {
+	height: calc(100% - 106px);
+}
+
 #notice {}
 
 #header {
@@ -116,11 +120,12 @@ html, body {
 }
 
 #main {
+	position: relative;
 	display: flex;
 	justify-content: center;
 	/* background-color: rgba(255, 255, 255, 0.1); */
 	width: 900px;
-	height: 800px;
+	height: calc(100% - 106px);
 	margin: 0 auto;
 }
 
