--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -16,6 +16,17 @@ html, body {
 	background: url('../src/img/background-l.png') no-repeat center;
 }
 
+ul {
+	text-align: center;
+}
+
+li {
+	float: left;
+	align-items: start;
+	list-style: none;
+	margin: 3px;
+}
+
 ::-webkit-scrollbar-track,
 ::-webkit-scrollbar {
 	background-color: transparent;
@@ -67,10 +78,10 @@ html, body {
 	position: absolute;
 	width: 100%;
 	height: 20em;
+	margin: 0 auto;
 }
 
 #selectArea {
-	background-color: rgba(0, 0, 0, 0.5);
 
 	display: flex;
 	justify-content: space-between;
@@ -80,21 +91,23 @@ html, body {
 }
 
 #colorPicker {
+	background-color: rgba(0, 0, 0, 0.5);
 	display: inline;
-	margin: 0 1em;
-	width: 30%;
+	margin: 0 0.5em;
+	width: 300px;
 	height: 100%;
 	overflow: auto;
-	/* background-color: brown; */
 }
 
 #flowerPicker {
+	background-color: rgba(0, 0, 0, 0.5);
+
 	display: inline;
-	margin: 0 1em;
-	width: 70%;
+	margin: 0 0.5em;
+	width: calc(100% - 305px);
 	height: 100%;
 	overflow-y: scroll;
-	/* background-color: brown; */
+	font-size: xx-large;
 }
 
 #popBtn {
@@ -180,7 +193,8 @@ html, body {
 /* 모바일 */
 @media (max-width: 767px) {
 	#menu {
-		height: 70%;
+		height: calc(70%);
+		margin: 0 auto;
 	}
 
 	#selectArea {
@@ -189,14 +203,15 @@ html, body {
 	}
 
 	#colorPicker {
+		display: inline-block;
+		white-space: nowrap;
 		margin: 0;
 		width: 100%;
-		height: 8em;
-		overflow-x: scroll;
+		height: 230px;
 	}
 
 	#flowerPicker {
-		margin: 0.5em 0 0;
+		margin: 0.2em 0 0;
 		width: 100%;
 	}
 
@@ -222,7 +237,15 @@ html, body {
 	#footer {
 		margin-left: 10px;
 		height: 30px;
-		bottom: 3em;
+		bottom: 2.5em;
+	}
+
+	ul {
+		text-align: center;
+	}
+
+	li {
+		list-style: none;
 	}
 }
 
