--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -14,6 +14,7 @@ html, body {
 	align-items: center;
 	display: block;
 	background: url('../src/img/background-l.png') no-repeat center;
+	background-size: 1920px 1080px;
 }
 
 ul {
