--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -19,6 +19,7 @@ html, body {
 
 ul {
 	text-align: center;
+	margin: 0;
 }
 
 li {
@@ -102,13 +103,22 @@ li {
 
 #flowerPicker {
 	background-color: rgba(0, 0, 0, 0.5);
-
 	display: inline;
 	margin: 0 0.5em;
 	width: calc(100% - 305px);
 	height: 100%;
 	overflow-y: scroll;
 	font-size: xx-large;
+	padding: 0;
+}
+
+#flowerPicker ul li {
+	margin: 0;
+}
+
+#flowerPicker ul li img {
+	width: 75px;
+	height: 75px;
 }
 
 #popBtn {
