--- a/makeFlowerWreath/css/style.css
+++ b/makeFlowerWreath/css/style.css
@@ -75,7 +75,7 @@ li {
 }
 
 #menu {
-	z-index: 0;
+	z-index: 1;
 	position: absolute;
 	width: 100%;
 	margin: 0 auto;
@@ -119,6 +119,19 @@ li {
 	height: 75px;
 }
 
+#ribbon li {
+	margin: 10px !important;
+}
+
+#ribbon li img {
+	width: auto !important;
+}
+
+#base li img {
+	width: 300px !important;
+	height: 300px !important;
+}
+
 #popBtn {
 	display: flex;
 	background-color: rgba(0, 0, 0, 0.5);
@@ -151,7 +164,10 @@ li {
 }
 
 #printSection {
-	display: contents;
+	margin: 4em auto;
+	z-index: 100;
+	width: 600px;
+	height: 600px;
 }
 
 #areaBorder {
@@ -171,6 +187,21 @@ li {
 	height: 600px;
 }
 
+.base_vine {
+	background: url('/src/img/base/base_vine.png');
+}
+
+.base_flower {
+	background: url('/src/img/base/base_flower.png');
+}
+
+.base_branch {
+	background: url('/src/img/base/base_branch.png');
+}
+
+.base_thorn {
+	background: url('/src/img/base/base_thorn.png');
+}
 
 #customArea {
 	display: block;
@@ -196,19 +227,11 @@ li {
 	height: 100px;
 }
 
-.flower {
+.draggable {
 	display: flex;
 	position: absolute;
 	align-items: center;
 	justify-content: center;
-	/* width: 100px;
-	height: 100px; */
-	z-index: 100;
-}
-
-.flower img {
-	/* width: 100px;
-	height: 100px; */
 }
 
 .active {
@@ -256,14 +279,24 @@ li {
 		height: 400px;
 	}
 
+	#areaBorder {
+		width: 400px;
+		height: 400px;
+	}
+
 	#basicFrame {
-		margin: auto;
+		width: 400px;
+		height: 400px;
+		background-size: 400px 400px;
+		background-position: center;
+	}
+
+	#printSection {
 		width: 400px;
 		height: 400px;
 	}
 
 	#customArea {
-		margin: auto;
 		width: 400px;
 		height: 400px;
 	}
